# auca

./: .gitignore  README.md  auca.cabal
doc/: Makefile  auca.tex  build.sh  intro.tex
src/: Makefile  auca.lhs
src/AUCA/: Core.lhs  Meta.lhs  Option.lhs  Util.lhs
