name: auca
version: 0.0.1.5
synopsis: Execute arbitrary command(s) based on file changes
license: BSD2
license-file: LICENSE
author: Linus Arver
maintainer: linusarver@gmail.com
category: Utility
build-type: Simple
cabal-version: >=1.10

executable auca
  main-is: auca.lhs
  default-language: Haskell2010
  other-modules:
      AUCA.Core
    , AUCA.Meta
    , AUCA.Option
    , AUCA.Util
  other-extensions:
      DeriveDataTypeable
    , PackageImports
    , RecordWildCards
  hs-source-dirs: src
  ghc-options: -Wall -Werror -O2 -threaded -fno-warn-tabs
  build-depends:
      base >= 4.7
    , bytestring >= 0.10.8.2
    , directory >= 1.3
    , cmdargs >= 0.10.7
    , hinotify >= 0.3.7
    , monads-tf >= 0.1.0.2
    , process >= 1.2.0.0
    , stm >= 2.4.3
    , time >= 1.4.2
